Sun Jul 10 20:59:38 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: Add new class variable `@@testfile_prefix`.
	  This is for changing test name prefix. (For testing)

	* test/testunit/tests_for_parallel/ptest_first.rb: Renamed from
	  test_first.rb

	* test/testunit/tests_for_parallel/ptest_second.rb: Renamed from
	  test_second.rb

	* test/testunit/tests_for_parallel/ptest_third.rb: Renamed from
	  test_third.rb

	* test/testunit/tests_for_parallel/ptest_forth.rb: Renamed from
	  test_forth.rb

	* test/testunit/tests_for_parallel/runner.rb: Remove misc.rb

	* test/testunit/tests_for_parallel/ptest_first.rb: ditto.

	* test/testunit/tests_for_parallel/ptest_second.rb: ditto.

	* test/testunit/tests_for_parallel/ptest_third.rb: ditto.

	* test/testunit/tests_for_parallel/ptest_forth.rb: ditto.

	* test/testunit/tests_for_parallel/misc.rb: Removed because no longer
	  needed.

	* test/testunit/test_parallel.rb: Fix assertions for above.

Sun Jul 10 16:57:08 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_throw): check a class frame.
	  Fixes Bug #4648.
	  The patch is contributed by Kazuki Tsujimoto.

	* bootstraptest/test_proc.rb: add tests for above.

Sun Jul 10 17:28:01 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (mutex_debug): use exit(EXIT_FAILURE) instad of
	  exit(1).
	* thread_pthread.c (add_signal_thread_list): ditto.
	* thread.c (rb_thread_call_with_gvl): ditto.
	* util.c (Bug): ditto.

Sun Jul 10 15:58:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Merge json gem 1.5.4+ (f7f78896607b6f6226cd).
	  [Bug #4700]

Sun Jul 10 16:41:32 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_core.h (typedef struct rb_vm_struct): create a new
	  'inhibit_thread_createion' field.
	* thread.c (rb_thread_terminate_all): set inhibit_thread_creation.
	* thread.c (thread_s_new): don't permit to create new thread
	  if the VM is under destruction. Otherwise evil finalizer code